k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-test
  labels:
    app: ci-cd-test
spec:
  type: ClusterIP
  selector:
    app: ci-cd-test
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
