k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-cd-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ci-cd-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ci-cd-test
                port:
                  number: 80
